<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/music_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/music_artist"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/play_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_later"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/add_to_queue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_queue"
        android:textColor="@color/white"
        android:textSize="18sp"/>
    <TextView
    android:layout_marginTop="20dp"
    android:id="@+id/add_to_play_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/add_to_playlist"
    android:textColor="@color/white"
    android:textSize="18sp"/>
    <TextView
    android:layout_marginTop="20dp"
    android:id="@+id/delete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/delete"
    android:textColor="@color/white"
    android:textSize="18sp"/>
    <TextView
    android:layout_marginTop="20dp"
    android:id="@+id/share"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/share"
    android:textColor="@color/white"
    android:textSize="18sp"/>



</LinearLayout>