<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <ImageView
        android:layout_width="25dp"
        android:id="@+id/play_list_back_btn_id"
        android:layout_height="25dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="27dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlists"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="30dp"
        android:layout_marginTop="25sp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="25sp">
        <ImageView

            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:textSize="14sp"
            android:text="@string/shuffle_playback"
            android:layout_marginStart="40dp"/>

        <Button
            android:id="@+id/random_bnt_id"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:background="@android:color/transparent"/>
    </androidx.cardview.widget.CardView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_to"
            android:layout_marginTop="25sp"
            android:layout_marginStart="200dp"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp">
        <ImageView
            android:id="@+id/play_list_add_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_skip_next_24"
            android:layout_marginTop="120dp"/>


    </androidx.cardview.widget.CardView>


</LinearLayout>