<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical">


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/recent_back_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recent"
            android:textColor="@color/white"

            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_play_circle_filled_24"
                app:tint="@color/white" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="14dp"
                android:text="@string/shuffle_playback"
                android:textSize="14sp" />

            <Button
                android:id="@+id/recent_random_bnt_id"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:background="@android:color/transparent" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/delete_recent_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="180dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/second_layout"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/custom_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/grey"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/music_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/music_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/music_subtitle"
            android:layout_marginStart="80dp"
            android:text="@string/hello" />

        <ImageView
            android:id="@+id/pause_music_id"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="320dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_play_circle_filled_24" />

        <ImageView
            android:id="@+id/next_music"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="370dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_skip_next_24" />
    </RelativeLayout>
    </RelativeLayout>

</LinearLayout>