<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="360dp">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_play_circle_filled_24" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/shuffle_playback"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/sort_by_id"
            android:layout_width="wrap_content"
            android:layout_height="24sp"
            android:layout_gravity="end"
            android:layout_marginStart="180dp"
            android:src="@drawable/ic_unfold" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/music_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/custom_buttom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/grey"
        android:orientation="horizontal">

        <Button
            android:id="@+id/music_start_btn_id"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:background="#00000000" />


        <TextView
            android:id="@+id/music_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:lines="1"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/music_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/music_subtitle"
            android:layout_marginStart="80dp"
            android:text="@string/hello" />

        <ImageView
            android:id="@+id/play_music_id"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_play_circle_filled_24"
            app:tint="@color/white" />

        <ImageView
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/paused_btn_id"
            android:src="@drawable/pause1"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/next_music"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_skip_next_24"
            app:tint="@color/white" />


    </RelativeLayout>


</LinearLayout>

