<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/gray"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp">

            <TextView
                android:fontFamily="monospace"                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:gravity="center_vertical"
                android:paddingStart="30sp"
                android:text="@string/search_songs_playlists_and_artist"
                android:textColorHint="@color/purple_700"
                android:textSize="10sp"
                tools:ignore="RtlSymmetry,SmallSp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10sp"
                android:src="@drawable/ic_search" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_mic_one" />

            <Button
                android:id="@+id/search_btn_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
                android:layout_below="@id/search_panel"
                android:id="@+id/heart_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:fontFamily="monospace"
                        android:layout_height="match_parent"
                        android:background="@color/purple_id"
                        android:paddingStart="10dp"
                        android:paddingTop="60dp"
                        android:text="@string/favorites"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="80dp"
                        android:src="@drawable/ic_heart1" />

                    <Button
                        android:id="@+id/favorites_btn_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#00000000" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:fontFamily="monospace"                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/green_id"
                        android:paddingStart="10dp"
                        android:paddingTop="60dp"
                        android:text="@string/playlists"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30sp"
                        android:src="@drawable/ic_playlist_play" />

                    <Button
                        android:id="@+id/playlist_btn_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#00000000" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:fontFamily="monospace"                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/brown"
                        android:paddingStart="10dp"
                        android:paddingTop="60dp"
                        android:text="@string/recent"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30sp"
                        android:layout_marginEnd="75dp"
                        android:src="@drawable/ic_access_time" />

                    <Button
                        android:id="@+id/recent_btn_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#00000000" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

    <LinearLayout
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heart_panel"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="monospace"                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/all_sangs"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />



                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/table_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray"
                    android:scrollbarSize="10dp"
                    app:tabIndicatorAnimationMode="fade"
                    app:tabIndicatorColor="@color/grey"
                    app:tabSelectedTextColor="@color/purple_id"
                    app:tabTextColor="@color/white" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>



    <RelativeLayout
        android:id="@+id/custom_buttom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/grey"
        android:orientation="horizontal">

        <Button
            android:id="@+id/music_start_btn_id"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:background="#00000000" />


        <TextView
            android:id="@+id/music_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:fontFamily="monospace"
            android:lines="1"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="monospace"
            android:id="@+id/music_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/music_subtitle"
            android:layout_marginStart="80dp"
            android:text="@string/hello" />

        <ImageView
            android:id="@+id/play_music_id"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_play_circle_filled_24"
            app:tint="@color/white" />

        <ImageView
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/paused_btn_id"
            android:src="@drawable/pause1"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/next_music"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_skip_next_24"
            app:tint="@color/white" />


    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:layout_marginStart="15sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20sp"
        app:cardCornerRadius="100dp"
        android:layout_width="60dp"
        android:layout_height="60dp">

    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="match_parent">

    </View>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_unfold"
            android:contentDescription="@string/todo" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>